--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "gpxparser": "^3.0.8",
     "multer": "^1.4.5-lts.1"
   }
 }
