--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "gpxparser": "^3.0.8",
-    "multer": "^1.4.5-lts.1"
+    "leaflet": "^1.9.4",
+    "leaflet-gpx": "^2.1.2",
+    "multer": "^1.4.5-lts.1",
+    "unzipper": "^0.12.3"
   }
 }
